k8s/environments/staging/patches/frontend-service-urls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: div4u-frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
