k8s/environments/staging/patches/imagepullsecrets-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: div4u-backend
spec:
  template:
    spec:
      imagePullSecrets:
      - name: staging-harbor-registry-secret
      containers:
      - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: div4u-frontend
spec:
  template:
    spec:
      imagePullSecrets:
      - name: staging-harbor-registry-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: div4u-comparison
spec:
  template:
    spec:
      imagePullSecrets:
      - name: staging-harbor-registry-secret
      containers:
      - name: comparison
